Changes to be committed: 	modified:   README.md 	modified:   _layouts/default.html 	modified:   index.md 	new file:   premium.md

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,7 @@
                 <p><a href="/howto/"><b>How To</b></a></p>
                 <p><a href="/privacy/"><b>Privacy</b></a></p>
                 <p><a href="/support/"><b>Support</b></a></p>
+                <p><a href="/premium/"><b>Premium</b></a></p>
             </div>
         </header>
         <section>
